# django-tailwind-postcss

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml  testing.yml  tests.yml
tailwind/: npm.py
tailwind/app_template/: package.json  postcss.config.js  tailwind.config.js
tailwind/app_template/static_src/: package.json  postcss.config.js  tailwind.config.js
tailwind/app_template/static_src/src/: styles.css
tailwind/app_template/templates/: base.html
tailwind/management/commands/: tailwind.py
tests/: conftest.py  test_cli.py  test_settings.py  tests.py
