[tool.poetry]
name = "django-tailwind-postcss"
version = "0.9.0"
description = "Tailwind CSS Framework for Django projects"
authors = ["Oliver Andrich <oliver@andrich.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/oliverandrich/django-tailwind-postcss"
keywords = ["django", "tailwind", "css", "postcss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2"
]
packages = [
    { include = "tailwind" }
]

[tool.poetry.dependencies]
python = "^3.7"
django = ">=2.2"

[tool.poetry.dev-dependencies]
tox = "^3.14.3"
pre-commit = "^2.6.0"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.2.2"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
